labs/simple-ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        defaultBackend:
          service.name: nginx
          service.port.number: 80
      - path: ImplementationSpecific
